--- a/report/pers_schedule/references.bib
+++ b/report/pers_schedule/references.bib
@@ -9,6 +9,17 @@
   publisher={Elsevier}
 }
 
+@article{youden1950index,
+  title={Index for rating diagnostic tests},
+  author={Youden, William J},
+  journal={Cancer},
+  volume={3},
+  number={1},
+  pages={32--35},
+  year={1950},
+  publisher={Wiley Online Library}
+}
+
 @article{Gleason_interobs_var,
   title={Accuracy of biopsy Gleason scores from a large uropathology laboratory: use of a diagnostic protocol to minimize observer variability},
   author={Carlson, Grant D and Calvanese, Christina B and Kahane, Hillel and Epstein, Jonathan I},
@@ -65,6 +76,55 @@
   publisher={NIH Public Access}
 }
 
+@article{GlobalCancerStats2012,
+  title={Global cancer statistics, 2012},
+  author={Torre, Lindsey A and Bray, Freddie and Siegel, Rebecca L and Ferlay, Jacques and Lortet-Tieulent, Joannie and Jemal, Ahmedin},
+  journal={CA: a cancer journal for clinicians},
+  volume={65},
+  number={2},
+  pages={87--108},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+@article{potoskyPSAcancer,
+author = {Potosky, AL and Miller BA and Albertsen PC and Kramer BS},
+title = {The role of increasing detection in the rising incidence of prostate cancer},
+journal = {JAMA},
+volume = {273},
+number = {7},
+pages = {548-552},
+year = {1995},
+doi = {10.1001/jama.1995.03520310046028},
+URL = { + http://dx.doi.org/10.1001/jama.1995.03520310046028}
+}
+
+@article {USACancerStats2017,
+author = {Siegel, Rebecca L. and Miller, Kimberly D. and Jemal, Ahmedin},
+title = {Cancer statistics, 2017},
+journal = {CA: A Cancer Journal for Clinicians},
+volume = {67},
+number = {1},
+issn = {1542-4863},
+url = {http://dx.doi.org/10.3322/caac.21387},
+doi = {10.3322/caac.21387},
+pages = {7--30},
+keywords = {cancer cases, cancer statistics, death rates, incidence, mortality},
+year = {2017},
+}
+
+
+@article{rizopoulos2014bma,
+  title={Combining dynamic predictions from joint models for longitudinal and time-to-event data using Bayesian model averaging},
+  author={Rizopoulos, Dimitris and Hatfield, Laura A and Carlin, Bradley P and Takkenberg, Johanna JM},
+  journal={Journal of the American Statistical Association},
+  volume={109},
+  number={508},
+  pages={1385--1397},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
+
 @article{lopez2014optimalcutpoints,
   title={OptimalCutpoints: an R package for selecting optimal cutpoints in diagnostic tests},
   author={L{\'o}pez-Rat{\'o}n, M{\'o}nica and Rodr{\'\i}guez-{\'A}lvarez, Mar{\'\i}a Xos{\'e} and Suarez, CC and Sampedro, FG},
@@ -107,8 +167,7 @@ number = {1},
 pages = {149},
 year = {2016},
 doi = {10.1093/biostatistics/kxv031},
-URL = { + http://dx.doi.org/10.1093/biostatistics/kxv031},
-eprint = {/oup/backfile/content_public/journal/biostatistics/17/1/10.1093_biostatistics_kxv031/3/kxv031.pdf}
+URL = { + http://dx.doi.org/10.1093/biostatistics/kxv031}
 }
 
 @article{bebu2017OptimalScreening,
@@ -258,10 +317,16 @@ doi = {10.1093/biostatistics/kxv009},
 }
 
 @article{rizopoulosJMbayes,
-  title={The R package JMbayes for fitting joint models for longitudinal and time-to-event data using MCMC},
-  author={Rizopoulos, Dimitris},
-  journal={arXiv preprint arXiv:1404.7625},
-  year={2014}
+   author = {Dimitris Rizopoulos},
+   title = {The R Package JMbayes for Fitting Joint Models for Longitudinal and Time-to-Event Data Using MCMC},
+   journal = {Journal of Statistical Software, Articles},
+   volume = {72},
+   number = {7},
+   year = {2016},
+   issn = {1548-7660},
+   pages = {1--46},
+   doi = {10.18637/jss.v072.i07},
+   url = {https://www.jstatsoft.org/v072/i07}
 }
 
 @article{eilers1996flexible,
