--- a/report/pers_schedule/mainmatter/algorithm.tex
+++ b/report/pers_schedule/mainmatter/algorithm.tex
@@ -1,26 +1,28 @@
+\resizebox{0.9\textwidth}{0.9\textheight}{%
+
 \begin{tikzpicture}
 \node (start) [startstop] {
-	Enter Active Surveillance.
-	\begin{enumerate}[noitemsep, leftmargin=*]
-		\item Conduct a biopsy.
-		\item Set $t=T^{nv}=0$ 
-		\item Set $u = \infty$
-	\end{enumerate}
+Enter Active Surveillance.
+\begin{enumerate}[noitemsep, leftmargin=*]
+\item Conduct a biopsy.
+\item Set $t=T^{nv}=0$ 
+\item Set $u = \infty$
+\end{enumerate}
 };
 
 \node (takePSA) [process, below=1cm of start] {
-	\begin{enumerate}[noitemsep,topsep=0pt, leftmargin=*]
-		\item Measure PSA at $T^{nv}$ 
-		\item Set $s=T^{nv}$
-	\end{enumerate}
+\begin{enumerate}[noitemsep,topsep=0pt, leftmargin=*]
+\item Measure PSA at $T^{nv}$ 
+\item Set $s=T^{nv}$
+\end{enumerate}
 };
 
 \node (propTime) [process, below=1cm of takePSA] {
-	\begin{enumerate}[noitemsep,topsep=0pt, leftmargin=*]
-		\item Set $u^{pv} = u$ 
-		\item Update $g(T^*_j)$ 
-		\item Propose $u$
-	\end{enumerate}
+\begin{enumerate}[noitemsep,topsep=0pt, leftmargin=*]
+\item Set $u^{pv} = u$ 
+\item Update $g(T^*_j)$ 
+\item Propose $u$
+\end{enumerate}
 };
 
 \node (decision1) [decision, below = 1.5cm of propTime] {$u < u^{pv}$?};
@@ -35,17 +37,17 @@
 \node (decision4) [decision, right=1.5cm of decision2] {$u > T^{nv}$?};
 
 \node (pro3) [process, below=1cm of decision2] {
-	\begin{enumerate}[noitemsep,topsep=0pt, leftmargin=*]
-		\item Conduct Biopsy at $t + 1$ 
-		\item Set $t = t + 1$
-	\end{enumerate}
+\begin{enumerate}[noitemsep,topsep=0pt, leftmargin=*]
+\item Conduct Biopsy at $t + 1$ 
+\item Set $t = t + 1$
+\end{enumerate}
 };
 
 \node (pro4) [process, below=1cm of decision4] {
-	\begin{enumerate}[noitemsep,topsep=0pt, leftmargin=*]
-		\item Conduct Biopsy at $u$
-		\item Set $t = u$
-	\end{enumerate}
+\begin{enumerate}[noitemsep,topsep=0pt, leftmargin=*]
+\item Conduct Biopsy at $u$
+\item Set $t = u$
+\end{enumerate}
 };
 
 \node (decision3) [decision, below=1cm of pro3] {Gleason > 6?};
@@ -69,6 +71,9 @@
 \draw [arrow] (pro4) |- (decision3);
 \draw [arrow] (decision3) -- node[anchor=east] {Yes} (stop);
 \draw [arrow] (decision4) -- node[anchor=east] {No} (pro4);
- \draw [arrow] (decision3) -- node[anchor=south]{No} (pro7);
+\draw [arrow] (decision3) -- node[anchor=south]{No} (pro7);
 \draw [arrow] (pro7.west)|- ([xshift=-0.35cm, yshift=-7cm]pro5.north west) |- (propTime);
 \end{tikzpicture}
+
+}
+
