--- a/report/pers_schedule/mainmatter/introduction.tex
+++ b/report/pers_schedule/mainmatter/introduction.tex
@@ -2,18 +2,18 @@
 
 \section{Introduction}
 \label{sec : introduction}
-Prostate cancer is the development of cancer in the prostate gland. With increase in life expectancy and increase in number of screening tests, an increase in diagnosis of low grade prostate cancers has been observed. Majority of these cancers are (over) diagnosed solely due of screening and wouldn't have shown any malignant symptoms for a long time otherwise. To avoid overtreatment, patients diagnosed with prostate cancer are often motivated to join active surveillance (AS) programs instead of taking immediate treatment. The goal of AS programs is to routinely check the progression of prostate cancer and avoid serious treatments such as surgery or chemotherapy as long as they are not needed.\\
+In this decade prostate cancer is the second most frequently diagnosed cancer (14\% of all cancers) in males worldwide, and the most frequent (19\% of all cancers in USA alone) in economically developed countries \citep{GlobalCancerStats2012,USACancerStats2017}. With increase in life expectancy and increase in number of screening programs, an increase in diagnosis of low grade prostate cancers has been observed \citep{potoskyPSAcancer}. A major issue of screening programs that also has been established in other types of cancers (e.g. breast cancer) is over-diagnosis. To avoid overtreatment, patients diagnosed with low grade prostate cancer are often motivated to join active surveillance (AS) programs. The goal of AS is to routinely check the progression of prostate cancer and avoid serious treatments such as surgery or chemotherapy as long as they are not needed.\\
 
-Currently the largest AS program worldwide is PRIAS (\url{www.prias-project.org}) \citep{bokhorst2015compliance}. Patients enrolled in PRIAS are closely monitored using serum prostate-specific antigen (PSA) levels, digital rectal examination (DRE) and repeat prostate biopsies. Biopsies are evaluated using the Gleason grading system. Gleason scores range between 2 and 10, where a score 10 corresponds to a very serious state of prostate cancer. Patients who join PRIAS have a Gleason score of 6 or less, DRE score of cT2c or less and a PSA of 10 ng/mL or less at the time of induction. Although a PSA doubling time, also called PSA-DT (measured as the inverse of the slope of regression line through the base 2 logarithm of PSA values) of less than 3 years, DRE of cT3 or more, and a Gleason score more than 6 are indicators of prostate cancer progression, only DRE and Gleason scores are considered to be conclusive in this regard \citep{bokhorst2016decade}. If either the DRE or the Gleason score are found to be higher than the aforementioned thresholds, then the patient is removed from AS for further curative treatment. When the Gleason score becomes greater than 6, it is also known as Gleason reclassification (referred to as GR here onwards).\\
+Currently the largest AS program worldwide is PRIAS (\url{www.prias-project.org}) \citep{bokhorst2015compliance}. Patients enrolled in PRIAS are closely monitored using serum prostate-specific antigen (PSA) levels, digital rectal examination (DRE) and repeat prostate biopsies. Biopsies are evaluated using the Gleason grading system. Gleason scores range between 2 and 10, where a score 10 corresponds to a very serious state of prostate cancer. Patients who join PRIAS have a Gleason score of 6 or less, DRE score of cT2c or less and a PSA of 10 ng/mL or less at the time of induction. Although a PSA doubling time, also called PSA-DT (measured as the inverse of the slope of regression line through the base 2 logarithm of PSA values) of less than 3 years, DRE of cT3 or more, and a Gleason score more than 6 are indicators of prostate cancer progression, only DRE and Gleason scores are considered to be conclusive in this regard \citep{bokhorst2016decade}. If either the DRE or the Gleason score are found to be higher than the aforementioned thresholds, then the patient is removed from AS for further curative treatment. When the Gleason score becomes greater than 6, it is also known as Gleason reclassification (referred to as GR hereafter).\\
 
-Gleason scores are reliable, however the associated biopsies are difficult to conduct, cause pain and have serious side effects such as hematuria and sepsis for prostate cancer patients \citep{loeb2013systematic}. So much so, that PRIAS as well as majority of the AS programs worldwide strongly adhere to the rule of not having more than 1 biopsy per year. Performing a biopsy every year (we refer to it as annual schedule here onwards) has the advantage that it is possible to detect GR within 1 year since its occurrence. The drawbacks of this schedule though, are not only medical but also financial. \cite{keegan2012active} have shown that if a biopsy is performed every year then the costs of AS per head, at 10 years of follow-up exceed the costs of treatment (brachytherapy or prostatectomy) at 6 and 8 years of follow-up, respectively. They also found that performing biopsy every other year led to 99\% increase in savings (AS vs. primary treatment) per head over a period of 10 years compared to annual schedule. Despite this, several AS programs employ the annual schedule \citep{tosoian2011active,welty2015extended}. For patients enrolled in PRIAS the schedule is comparatively less rigorous. In PRIAS schedule one biopsy is performed at the time of induction, and the rest at year 1, 4, 7, 10 and every 5 years thereafter. An exception is made, if at any time a patient has PSA-DT less than 10 years, wherein annual schedule for biopsy is prescribed.\\
+Gleason scores are reliable, however the associated biopsies are difficult to conduct, cause pain and have serious side effects such as hematuria and sepsis for prostate cancer patients \citep{loeb2013systematic}. Due to these reasons PRIAS as well as the majority of the AS programs worldwide strongly adhere to the rule of not having more than 1 biopsy per year. Performing a biopsy every year (we refer to it as annual schedule hereafter) has the advantage that it is possible to detect GR within 1 year of its occurrence. The drawbacks of this schedule though, are not only medical but also financial. \cite{keegan2012active} have shown that if a biopsy is performed every year then the costs of AS per head, at 10 years of follow-up exceed the costs of treatment (brachytherapy or prostatectomy) at 6 and 8 years of follow-up, respectively. They also found that performing biopsy every other year led to 99\% increase in savings (AS vs. primary treatment) per head over a period of 10 years compared to annual schedule. Despite this, several AS programs employ the annual schedule \citep{tosoian2011active,welty2015extended}. For patients enrolled in PRIAS the schedule is comparatively less rigorous. In PRIAS schedule one biopsy is performed at the time of induction, and the rest at year 1, 4, 7, 10 and every 5 years thereafter. An exception is made, if at any time a patient has PSA-DT less than 10 years, wherein annual schedule for biopsy is prescribed.\\
 
-PRIAS schedule is less rigorous than annual schedule, yet it has a high non compliance rate for repeat biopsies. \cite{bokhorst2015compliance} reported that the percentage of men receiving repeat biopsies decreased from 81\% at year 1 to 60\% in year 4, 53\% in year 7 and 33\% in year 10 of follow up. Non compliance of biopsy schedule reduces the effectiveness of AS programs, as progression is detected late. When compliance is high, patients whose cancer progress slowly often end up having biopsies when they are not needed. For a patient with faster progressing cancer, crude measures such as PSA-DT are employed to decide timing of biopsies. The fact that existing schedules require improvement is also evident in some of the reasons given by patients for non-compliance:  \textquoteleft patient does not want biopsy\textquoteright, \textquoteleft PSA stable\textquoteright, \textquoteleft complications on last biopsy\textquoteright and \textquoteleft no signs of disease progression on previous biopsy\textquoteright.\\ 
+PRIAS schedule is less rigorous than annual schedule, yet it has a high non-compliance rate for repeat biopsies. \cite{bokhorst2015compliance} reported that the percentage of men receiving repeat biopsies decreased from 81\% at year 1 to 60\% in year 4, 53\% in year 7 and 33\% in year 10 of follow up. Non-compliance of biopsy schedule reduces the effectiveness of AS programs, as progression is detected late. When compliance is high, patients whose cancer progress slowly often end up having biopsies when they are not needed. For a patient with faster progressing cancer, crude measures such as PSA-DT are employed to decide timing of biopsies. The fact that existing schedules require improvement is also evident in some of the reasons given by patients for non-compliance: \textquoteleft patient does not want biopsy\textquoteright, \textquoteleft PSA stable\textquoteright, \textquoteleft complications on last biopsy\textquoteright and \textquoteleft no signs of disease progression on previous biopsy\textquoteright.\\ 
 
-Let us assume that we have a new patient $j$ enrolled in an AS program and let $T_j^*$ denote the actual time of GR for this patient. Let the schedule of biopsies for this patient be given by $\{T^b_{j0}, T^b_{j1}, \ldots T^b_{j{N_j^b}}\}$, where $T^b_{j{N_j^b}}$ is the time at which GR is detected and $N_j^b$ is the number of biopsies conducted till that time. Because of the periodical nature of biopsy schedules, we never observe the exact time $T_j^*$ of GR. Instead we only observe the interval in which it falls, i.e. $T^*_j \epsilon (T^b_{j{N_j^b - 1}}, T^b_{j{N_j^b}}]$. In this context, the most useful biopsy schedule for a patient will be the one with the least number of biopsies $N_j^b$ and the smallest offset $O_j = T^b_{j{N_j^b}} - T_j^*$ possible. The motivation of this work is to improve upon the existing PRIAS schedule and annual schedule in terms of number of biopsies and offset. To this end, we have proposed personalized biopsy schedules tailored separately for every patient. The PRIAS schedule is a type of personalized schedule as well since it depends on the PSA-DT of the patient, an indicator of the state of disease. Sophisticated personalized schedules for a variety of scenarios have been developed in the past. For e.g. \cite{bebu2017OptimalScreening} have proposed Markov models based cost optimized personalized schedules. \cite{oMahonyOptimaInterval} have proposed cost optimized personalized equi-spaced screening intervals, using Microsimulation Screening Analysis (MISCAN) models. \cite{parmigiani1998designing} have used information theory to come up with schedules for detecting time to event in the smallest possible time interval. Most of these methods however create an entire schedule in advance. In contrast \cite{drizopoulosPersScreening} have proposed dynamic personalized schedules for longitudinal markers using joint models for time to event and longitudinal data\citep{tsiatis2004joint,rizopoulos2012joint}.\\
+This paper is motivated by the need to reduce the burden of biopsies and most optimally find the onset of Gleason reclassification. To this end, we intend to create schedules for biopsies which improve upon the existing PRIAS and annual schedule. For this purpose, one approach which stands out in particular in literature is personalized scheduling. That is, a different schedule for every patient and/or scenario. For e.g. \cite{bebu2017OptimalScreening} have proposed cost optimized personalized schedules based on Markov models. \cite{oMahonyOptimaInterval} have proposed cost optimized personalized equi-spaced screening intervals, using Microsimulation Screening Analysis (MISCAN) models. \cite{parmigiani1998designing} have used information theory to come up with schedules for detecting time to event in the smallest possible time interval. Most of these methods however create an entire schedule in advance. In contrast \cite{drizopoulosPersScreening} have proposed dynamic personalized schedules for longitudinal biomarkers using the framework of joint models for time to event and longitudinal data\citep{tsiatis2004joint,rizopoulos2012joint}.\\
 
-The personalized schedules we have proposed in this paper, utilize joint models and are dynamic. i.e. at a time only one future visit is scheduled, based on all the information gathered up to that point in time. More specifically, we have proposed two types of personalized schedules. One based on expected time of GR of a patient and the second based on the risk of GR. We have also analyzed an approach where the two types of personalized schedules are combined. Both types of schedules not only consider a patient's measurable attributes such as age, but also latent patient to patient variations in health, which cannot be measured directly. Results from previous repeat biopsies of the patient and PSA measurements as well as the population level information about hazard of GR, are used by the personalized schedules that we have proposed. It is important to note that a schedule for DRE measurements is not of interest since it is a non invasive procedure and has no serious medical implications. Thus the only event of interest is GR and not DRE crossing the threshold of cT2c.\\
+The schedules we propose in this paper are tailored separately for every patient, and are dynamic. That is, biopsies are scheduled at different time points per patient utilizing his available PSA measurements and previous biopsy results up to that point in time. We achieve this using joint models. Based on these models we obtain a full specification of the joint distribution of the PSA levels and time of GR. We further use it to define a patient-specific posterior predictive distribution of the time of GR given the observed PSA measurements and previous biopsies. Using the general framework of Bayesian decision theory, we propose a set of loss functions which are minimized to find the optimal time of performing a biopsy. These loss functions yield us two categories of personalized schedules, those based on expected time of GR and those based on the risk of GR. We also analyze an approach where the two types of schedules are combined. To compare the proposed personalized schedules with the PRIAS and annual schedule we conduct a simulation study, and then discuss various metrics for evaluating efficacy of each schedule, and choosing the most suitable one. It is important to note that a schedule for measurement of DRE is not of interest since it is a non invasive procedure and has no serious medical implications. Thus the only event of interest is GR and not DRE crossing the threshold of cT2c.\\
 
-Using joint models to model the PSA measurements and risk of GR has the advantage that the association between the two is also modeled. More importantly, the association is modeled via random effects, and therefore the models have an inherent patient specific nature. Secondly, joint models allow modeling the entire longitudinal history of PSA measurements, which is more sophisticated than PSA-DT. The use of PSA measurements in creating a personalized schedule is important because PSA is easy to measure, is cost effective and does not have any side effects. Secondly, in PRIAS \cite{bokhorst2015compliance} found that compliance rate for PSA measurements was as high as 91\%. They also showed that there were more men who had a Gleason score greater than 6 as well as PSA-DT less than 3 years compared to men who had Gleason > 6 as well as PSA-DT larger than 3 years. i.e. Information from PSA was indicative of GR. Lastly, some patients/doctors in PRIAS did not comply with the biopsy schedule because they considered PSA to be stable. Instead, if information from PSA is used in a methodical manner, it can lead to a more informative medical decision making process.\\
+As mentioned earlier, to achieve personalization the proposed schedules utilize information from PSA measurements. This is important because PSA measurements are easy to obtain, and thus they are consequently cost effective. PSA measurement process does not lead to any side effects and thus compliance rate for measurement of PSA levels is high( 91\% in PRIAS). Most importantly, it was found in PRIAS that PSA-DT was indicative of GR \cite{bokhorst2015compliance}. The information from PSA was however not fully utilized. More specifically, when PSA was observed to be stable, patients/doctors in PRIAS not always complied with the biopsy schedule. In this regard, the usage of joint models allows more sophisticated modeling of PSA levels and information from repeat biopsies than PRIAS, and thus offers a more informative decision making process.\\
 
 The rest of the paper is organized as follows. Section \ref{sec : jm_framework} covers briefly the joint modeling framework. Section \ref{sec : pers_sched_approaches} details the personalized scheduling approaches we have proposed in this paper. In Section \ref{sec : pers_schedule_PRIAS} we demonstrate personalized schedules in a real world scenario by employing them for the patients from the PRIAS program. Lastly, in Section \ref{sec: simulation_study}, we present the results from a simulation study we conducted, to compare personalized schedules with PRIAS schedule and annual schedule.
