--- a/report/pers_schedule/references.bib
+++ b/report/pers_schedule/references.bib
@@ -1,6 +1,6 @@
 @article{bokhorst2015compliance,
   title={Compliance rates with the Prostate Cancer Research International Active Surveillance (PRIAS) protocol and disease reclassification in noncompliers},
-  author={Bokhorst, Leonard P and Alberts, Arnout R and Rannikko, Antti and Valdagni, Riccardo and Pickles, Tom and Kakehi, Yoshiyuki and Bangma, Chris H and Roobol, Monique J and PRIAS study group and others},
+  author={Bokhorst, Leonard P. and Alberts, Arnout R. and Rannikko, Antti and Valdagni, Riccardo and Pickles, Tom and Kakehi, Yoshiyuki and Bangma, Chris H. and Roobol, Monique J. and PRIAS study group and others},
   journal={European urology},
   volume={68},
   number={5},
@@ -11,7 +11,7 @@
 
 @article{youden1950index,
   title={Index for rating diagnostic tests},
-  author={Youden, William J},
+  author={Youden, William J.},
   journal={Cancer},
   volume={3},
   number={1},
@@ -22,7 +22,7 @@
 
 @article{Gleason_interobs_var,
   title={Accuracy of biopsy Gleason scores from a large uropathology laboratory: use of a diagnostic protocol to minimize observer variability},
-  author={Carlson, Grant D and Calvanese, Christina B and Kahane, Hillel and Epstein, Jonathan I},
+  author={Carlson, Grant D. and Calvanese, Christina B. and Kahane, Hillel and Epstein, Jonathan I.},
   journal={Urology},
   volume={51},
   number={4},
@@ -34,7 +34,7 @@
 
 @article{cook1994equivalence,
   title={On the equivalence of constrained and compound optimal designs},
-  author={Cook, R Dennis and Wong, Weng Kee},
+  author={Cook, R. Dennis and Wong, Weng K.},
   journal={Journal of the American Statistical Association},
   volume={89},
   number={426},
@@ -45,7 +45,7 @@
 
 @article{lauter1976optimal,
   title={Optimal multipurpose designs for regression models},
-  author={L{\"a}uter, E},
+  author={L{\"a}uter, E.},
   journal={Mathematische Operationsforschung und Statistik},
   volume={7},
   number={1},
@@ -56,7 +56,7 @@
 
 @article{taylor2013real,
   title={Real-time individual predictions of prostate cancer recurrence using joint models},
-  author={Taylor, Jeremy MG and Park, Yongseok and Ankerst, Donna P and Proust-Lima, Cecile and Williams, Scott and Kestin, Larry and Bae, Kyoungwha and Pickles, Tom and Sandler, Howard},
+  author={Taylor, Jeremy M.G. and Park, Yongseok and Ankerst, Donna P. and Proust-Lima, Cecile and Williams, Scott and Kestin, Larry and Bae, Kyoungwha and Pickles, Tom and Sandler, Howard},
   journal={Biometrics},
   volume={69},
   number={1},
@@ -67,7 +67,7 @@
 
 @article{brown2009assessing,
   title={Assessing the association between trends in a biomarker and risk of event with an application in pediatric HIV/AIDS},
-  author={Brown, Elizabeth R},
+  author={Brown, Elizabeth R.},
   journal={The annals of applied statistics},
   volume={3},
   number={3},
@@ -78,7 +78,7 @@
 
 @article{GlobalCancerStats2012,
   title={Global cancer statistics, 2012},
-  author={Torre, Lindsey A and Bray, Freddie and Siegel, Rebecca L and Ferlay, Jacques and Lortet-Tieulent, Joannie and Jemal, Ahmedin},
+  author={Torre, Lindsey A. and Bray, Freddie and Siegel, Rebecca L. and Ferlay, Jacques and Lortet-Tieulent, Joannie and Jemal, Ahmedin},
   journal={CA: a cancer journal for clinicians},
   volume={65},
   number={2},
@@ -88,15 +88,14 @@
 }
 
 @article{potoskyPSAcancer,
-author = {Potosky, AL and Miller BA and Albertsen PC and Kramer BS},
+author = {Potosky, Arnold L. and Miller, Barry A. and Albertsen, Peter C. and Kramer, Barnett S.},
 title = {The role of increasing detection in the rising incidence of prostate cancer},
 journal = {JAMA},
 volume = {273},
 number = {7},
 pages = {548-552},
 year = {1995},
-doi = {10.1001/jama.1995.03520310046028},
-URL = { + http://dx.doi.org/10.1001/jama.1995.03520310046028}
+publisher={American Medical Association}
 }
 
 @article {USACancerStats2017,
@@ -105,18 +104,14 @@ title = {Cancer statistics, 2017},
 journal = {CA: A Cancer Journal for Clinicians},
 volume = {67},
 number = {1},
-issn = {1542-4863},
-url = {http://dx.doi.org/10.3322/caac.21387},
-doi = {10.3322/caac.21387},
 pages = {7--30},
-keywords = {cancer cases, cancer statistics, death rates, incidence, mortality},
 year = {2017},
+publisher={Wiley Online Library}
 }
-
 
 @article{rizopoulos2014bma,
   title={Combining dynamic predictions from joint models for longitudinal and time-to-event data using Bayesian model averaging},
-  author={Rizopoulos, Dimitris and Hatfield, Laura A and Carlin, Bradley P and Takkenberg, Johanna JM},
+  author={Rizopoulos, Dimitris and Hatfield, Laura A. and Carlin, Bradley P. and Takkenberg, Johanna J.M.},
   journal={Journal of the American Statistical Association},
   volume={109},
   number={508},
@@ -127,7 +122,7 @@ year = {2017},
 
 @article{lopez2014optimalcutpoints,
   title={OptimalCutpoints: an R package for selecting optimal cutpoints in diagnostic tests},
-  author={L{\'o}pez-Rat{\'o}n, M{\'o}nica and Rodr{\'\i}guez-{\'A}lvarez, Mar{\'\i}a Xos{\'e} and Suarez, CC and Sampedro, FG},
+  author={L{\'o}pez-Rat{\'o}n, M{\'o}nica and Rodr{\'\i}guez-{\'A}lvarez, Mar{\'\i}a X. and Cadarso-Su{\'a}rez, Carmen and Gude-Sampedro, Francisco and others},
   journal={Journal of Statistical Software},
   volume={61},
   number={8},
@@ -149,7 +144,7 @@ year = {2017},
 
 @article{oMahonyOptimaInterval,
   title={The Influence of Disease Risk on the Optimal Time Interval between Screens for the Early Detection of Cancer: A Mathematical Approach},
-  author={O’Mahony, James F and van Rosmalen, Joost and Mushkudiani, Nino A and Goudsmit, Frans-Willem and Eijkemans, Marinus JC and Heijnsdijk, Eveline AM and Steyerberg, Ewout W and Habbema, J Dik F},
+  author={O’Mahony, James F. and van Rosmalen, Joost and Mushkudiani, Nino A. and Goudsmit, Frans-Willem and Eijkemans, Marinus J.C. and Heijnsdijk, Eveline A.M. and Steyerberg, Ewout W. and Habbema, J Dik F},
   journal={Medical Decision Making},
   volume={35},
   number={2},
