--- a/report/pers_schedule/mainmatter/sim_study.tex
+++ b/report/pers_schedule/mainmatter/sim_study.tex
@@ -16,33 +16,16 @@ From the population $\mathcal{P}$ we randomly sample a total of 408 datasets wit
 \label{subsubsec : sim_study_pers_sched_details}
 We create personalized biopsy schedules only for the patients in the test dataset. To this end we first fit a joint model with the same specification as for PRIAS. to the training dataset. To model the baseline hazard we use a P-splines approach (Section \ref{subsec : jm_specification}). From the fitted joint model we obtain posterior distribution of parameters $p(\boldsymbol{\theta} \mid \mathcal{D}^k)$, which is required for the posterior predictive distribution $g(T^*_{kj})$ of the $j$-th test patient from the $k$-th dataset. While the posterior predictive distribution is sufficient for scheduling biopsies based on expected time of GR, the choice of time window $\Delta t$ (Section \ref{subsubsec : dynamic_risk_definitions}) has to be made for scheduling biopsies on the basis of dynamic risk of GR. In PRIAS and in most AS programs biopsies are done at a gap of 1 to 3 years. A gap of 1 year between biopsies detects GR the earliest, and in worst case the detection of GR can be delayed by 1 year. Being a clinically relevant period of time to differentiate between patients who obtain GR and those who don't, we choose a $\Delta t$ of 1 year. Further, in schedules based on dynamic risk of GR, for a test patient $j$, we choose a value of $\kappa$ which maximizes a binary classification measure (Section \ref{subsubsec : kappa_estimation}) at the last known repeat biopsy time $t$ of the patient. To this end the binary classification measures are first computed over a fine grid of $\kappa$ values in the interval $[0,1]$ using the training dataset and then the most optimal $\kappa$ is chosen.\\
 
-To create personalized schedules we employ the algorithm described in Section \ref{subsec : pers_sched_algorithm}. The algorithm is run for 7 different settings, one each corresponding to the following: PRIAS schedule, annual schedule, expected time of GR, median time of GR, dynamic risk of GR with $\kappa$ chosen such that a) Youden's $J$ is maximized, b) $\text{F}_1$-Score is maximized. In addition to these a mixed approach (Section \ref{subsec : mixed_approach}) is also employed where a choice between median time of GR and dynamic risk of GR (Youden's $J$ maximized) is made before scheduling a biopsy.
+To create personalized schedules we employ the algorithm described in Section \ref{subsec : pers_sched_algorithm}. The algorithm is run for 7 different settings, one each corresponding to the following: PRIAS schedule, annual schedule, expected time of GR, median time of GR, dynamic risk of GR with $\kappa$ chosen such that a) Youden's $J$ is maximized, b) $\text{F}_1$-Score is maximized. In addition to these a mixed approach (Section \ref{subsubsec : mixed_approach}) is also employed where a choice between median time of GR and dynamic risk of GR (Youden's $J$ maximized) is made before scheduling a biopsy.
 
-\subsection{Evaluating efficacy of scheduling methods}
-For a particular biopsy scheduling method $S$, the first criteria in the evaluation of efficacy of the method is the number of repeat biopsies $N^{bS}$ the corresponding schedule takes before GR is detected for a patient from the population. As we discussed earlier, the less the $N^{bS}$ the better it is for the patients. Our interest lies in the marginal distribution of $N^{bS}$ for the population $\mathcal{P}$. In its simplest form, the mean $E[N^{bS}]$ and variance $\mbox{var}[N^{bS}]$ of the aforementioned distribution are indicators of the performance of the scheduling algorithm. More specifically, a low mean as well as low variance is desired. Other quantiles of the distribution may also be used evaluation criteria. For example a method which takes less than 2 (say) biopsies in 95\% cases may be preferred.\\
-
-The second criteria in evaluation of efficacy of a schedule is the offset. Given a scheduling method $S$, the offset for a particular patient $j$ is defined as $O^S_j = T^S_{j{N^{bS}_j}} - T^*_j$, where $N^{bS}_j$ is the number of biopsies required for patient $j$ before GR is detected and $T^S_{j{N^{bS}_j}} > T^*_j$ is the time at which GR is detected by the scheduling method $S$. Once again the interest lies in both the mean $E[O^S]$ and variance $\mbox{var}[O^S]$ of the marginal distribution of offset.
-
-\subsubsection{Finding the most optimal schedule}
-Given the multiple criteria for efficacy of a schedule the next step is to find the most optimal schedule. Using principles from compound optimal designs \citep{lauter1976optimal} we propose to choose a scheduling method $S$ which minimizes the following loss function:
-
-\begin{equation}
-\label{eq : loss_func_sim_study_generic}
-L(S) = \sum_{g=1}^G \lambda_g \mathcal{G}_g(N^{bS})^{d_g=1}\mathcal{G}_g(O^S)^{d_g=0}
-\end{equation}
-where $\mathcal{G}_g(\cdot)$ is either a function of number of biopsies or of the offset, and $d_g$ is the corresponding indicator for this choice. Some examples of $\mathcal{G}_g(\cdot)$ are mean, median, variance and quantile function. Constants $\lambda_1, \ldots, \lambda_G$, where $\lambda_g \epsilon [0,1]$ and $\sum_{g=1}^G \lambda_g = 1$, are weights to differentially weigh-in the contribution of each of the $G$ evaluation criteria manifested via the functions $\mathcal{G}_g(\cdot)$. An example loss function is:
-\begin{equation}
-\label{eq : loss_func_sim_study}
-L(S) = \lambda_1 E[N^{bS}] + \lambda_2 E[O^S] 
-\end{equation}
-The choice of $\lambda_1$ and $\lambda_2$ is not easy. This because biopsies have serious medical side effects and the cost of an extra biopsy cannot be quantified easily. To obviate this issue we utilize the equivalence between compound and constrained optimal designs \citep{cook1994equivalence}. More specifically, it can be shown that for any $\lambda_1$ and $\lambda_2$ there exists a constant $C>0$ for which minimization of loss function in (\ref{eq : loss_func_sim_study}) is equivalent to minimization of the same, subject to the constraint that $E[O^S] < C$. i.e. The optimal schedule is the one with the least number of biopsies and an offset less than $C$. The choice of $C$ now can be based on the protocol of AS program. For example in PRIAS the maximum gap between 2 repeat biopsies is 3 years, i.e. If GR is detected within 3 years of its occurrence, it is acceptable. For the optimization in case of more than 2 criteria, such as in (\ref{eq : loss_func_sim_study_generic}), the solution can be found by minimizing $\mathcal{G}_G(\cdot)$ under the constraint $\mathcal{G}_g < C_g; g=1, \ldots, G-1$.\\
-
+\subsubsection{Estimation}
 For the loss function in (\ref{eq : loss_func_sim_study}), we estimate $E[N^{bS}]$, $\mbox{var}[N^{bS}]$, $E[O^S]$ and $\mbox{var}[O^S]$ using pooled estimates of each from the 254 repetitions of the simulation study. The estimates are calculated separately for each of the 7 methods mentioned in Section \ref{subsubsec : sim_study_pers_sched_details}. The pooled estimates for a scheduling method $S$ are calculated as following:
 \begin{align*}
 \widehat{E[O^S]} &= \frac{\sum_{k=1}^{254} n_k \widehat{E[O^S_k]}}{\sum_{k=1}^{254} n_k}, \\
 \widehat{\mbox{var}[O^S]} &= \frac{\sum_{k=1}^{254} (n_k - 1) \widehat{\mbox{var}[O^S_k]}}{\sum_{k=1}^{254} (n_k-1)}, 
 \end{align*}
 where $n_k$ are the number of test patients in the $k$-th simulation, $\widehat{E[O^S_k]} = \frac{\sum_{j=1}^{n_k}O^S_{kj}}{n_k}$ and $\widehat{\mbox{var}[O^S_k]} = \frac{\sum_{j=1}^{n_k}\big\{O^S_{kj} - \widehat{E[O^S_k]}\big\}^2}{n_k-1}$ are the estimated mean offset and estimated variance of the offset for the $k$-th simulation, respectively. The estimates for number of biopsies $N^{bS}$ are calculated similarly.
+
 
 \subsection{Results}
 From the simulations we calculated the pooled estimates of the mean and variance of number of biopsies/offset for the entire sample. The estimates are plotted in Figure \ref{fig : meanNbVsOffset} and also summarized in Table \ref{table : sim_study_pooled_estimates}. From the figure it is evident that those schedules which conduct less biopsies on average, have a higher average offset, and vice versa. For example, the annual schedule conducts 5.2 biopsies on average, which is the highest among all schedules, however it has the least average offset of 6 months as well. On the other hand the schedule based on expected time of GR conducts only 1.9 biopsies on average, the least among all schedules but it also has the highest average offset of 15 months. The schedule based on median time of GR performs almost the same as that based on expected time of GR. As mentioned earlier the variance in number of biopsies and offset are important as well. In this regard annual schedule has the largest $\mbox{var}[N^{bS}]$ since it attempts to contain the offset within an year, and consequently it has the least $\mbox{var}[O^S]$. Schedules based on expected and median time of GR perform the opposite in terms of variance.
